feat: env storage endpoints (#26)
* feat: add initial env storage endpoints

* refactor: group handlers and integration tests by scope

* feat: fetch world authorizations from world content server

* test: world content server component and improve coverage

* test: add fixtures file

* docs: update docs

* fix: only allow env management from owner and deployer

* refactor: world content server -> worlds content server

* docs: update README.md

* chore: add TODO for worlds content server cache

* test: improve test writing

* fix: only type deployment permissions in worlds content server response

* fix: remove unnecessary key validation

* fix: simplify error handling

* fix: improve worldName handling and validation

* chore: remove TODO

* test: merge test with describe to simplify test files

* feat: add worldPermissionComponent

* feat: secrets encryption (#27)

* feat: secrets encryption

* test: improve test writing

* fix: tests

* refactor: move error to errors.ts file and rename tests

* docs: add jsdocs for encyption component

* feat: add versioning to the encryption component

* fix: improve hex key validation

* fix: generic error message to avoid leaking info
